--- a/docs/content/components/FormControl.mdx
+++ b/docs/content/components/FormControl.mdx
@@ -38,7 +38,7 @@ import {FormControl} from '@primer/react-brand'
 
 ### Validation
 
-The following example demonstrates declarative form validation in [controlled mode](#).
+The following example demonstrates declarative form validation in [controlled mode](https://reactjs.org/docs/forms.html#controlled-components).
 
 Try changing the input value to to `monalisa` to show the `success` state.
 
@@ -134,7 +134,7 @@ Pass the `required` prop to `FormControl` to provide additional behavior and sta
 
 ### Using `refs`
 
-`FormControl` inputs can be used in [uncontrolled mode](#) by forwarding a `ref` to the underlying element.
+`FormControl` inputs can be used in [uncontrolled mode](https://reactjs.org/docs/uncontrolled-components.html) by forwarding a `ref` to the underlying element.
 
 ```javascript live noinline
 const App = () => {
