--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -22,7 +22,7 @@ import {River} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<Container p={3}>
+<>
   <River>
     <River.Visual>
       <img
@@ -74,13 +74,13 @@ import {River} from '@primer/react-brand'
       <Link href="#">Call to action</Link>
     </River.Content>
   </River>
-</Container>
+</>
 ```
 
 ### Image to text ratio
 
 ```jsx live
-<Container p={3}>
+<>
   {/* 50/50 (default) example */}
   <River>
     <River.Visual>
@@ -109,43 +109,41 @@ import {River} from '@primer/react-brand'
       <Text>This example applies an optional 60/40 image to text split.</Text>
     </River.Content>
   </River>
-</Container>
+</>
 ```
 
 ### Video
 
 ```jsx live
-<Container p={3}>
-  <River imageTextRatio="60:40">
-    <River.Visual hasShadow={false}>
-      <video
-        loop
-        playsInline
-        autoPlay
-        muted
-        aria-hidden="true"
-        poster="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress-placeholder.png"
-      >
-        <source
-          type="video/mp4; codecs=hevc,mp4a.40.2"
-          src="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress.hevc.mp4"
-        />
-        <source
-          type="video/mp4; codecs=avc1.4D401E,mp4a.40.2"
-          src="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress.h264.mp4"
-        />
-      </video>
-    </River.Visual>
-    <River.Content>
-      <Heading>Break issues into actionable tasks</Heading>
-      <Text>
-        Tackle complex issues with task lists and track their status with new
-        progress indicators. Convert tasks into their own issues and navigate
-        your work hierarchy.
-      </Text>
-    </River.Content>
-  </River>
-</Container>
+<River imageTextRatio="60:40">
+  <River.Visual hasShadow={false}>
+    <video
+      loop
+      playsInline
+      autoPlay
+      muted
+      aria-hidden="true"
+      poster="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress-placeholder.png"
+    >
+      <source
+        type="video/mp4; codecs=hevc,mp4a.40.2"
+        src="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress.hevc.mp4"
+      />
+      <source
+        type="video/mp4; codecs=avc1.4D401E,mp4a.40.2"
+        src="https://github.githubassets.com/images/modules/site/issues/issue-tasks-progress.h264.mp4"
+      />
+    </video>
+  </River.Visual>
+  <River.Content>
+    <Heading>Break issues into actionable tasks</Heading>
+    <Text>
+      Tackle complex issues with task lists and track their status with new
+      progress indicators. Convert tasks into their own issues and navigate your
+      work hierarchy.
+    </Text>
+  </River.Content>
+</River>
 ```
 
 ## Component props
