--- a/docs/content/components/Select.mdx
+++ b/docs/content/components/Select.mdx
@@ -9,6 +9,7 @@ description: Enable selection of one option from a list.
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
+import {Link} from 'gatsby'
 
 <Note>
 
@@ -249,3 +250,9 @@ Additional props can be passed to the `<option>` element. [See MDN for a list of
 | `label` | `string` |         | The name of the group of options. |
 
 Additional props can be passed to the `<optgroup>` element. [See MDN for a list of props](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/optgroup) accepted by the `<optgroup>` element.
+
+## Related components
+
+- <Link to="/components/Checkbox">Checkbox</Link>
+- <Link to="/components/FormControl">FormControl</Link>
+- <Link to="/components/TextInput">TextInput</Link>
