--- a/docs/content/components/TextInput.mdx
+++ b/docs/content/components/TextInput.mdx
@@ -9,6 +9,7 @@ description: A single-line text field.
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
 import {PropTableValues} from '../../src/components'
 import {Label} from '@primer/react'
+import {Link} from 'gatsby'
 
 <Note>
 
@@ -209,3 +210,9 @@ The component API supports all standard HTML attribute props, while providing so
 | `validationStatus` | <PropTableValues values={['error', 'success' ]} addLineBreaks />                                                                                       |         | Applies visual and semantic state to the underlying elements      |
 
 Additional props can be passed to the `<input>` element. [See MDN for a list of props](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input) accepted by the `<input>` element.
+
+## Related components
+
+- <Link to="/components/FormControl">FormControl</Link>
+- <Link to="/components/Select">Select</Link>
+- <Link to="/components/TextInput">TextInput</Link>
