--- a/docs/content/components/FormControl.mdx
+++ b/docs/content/components/FormControl.mdx
@@ -134,7 +134,11 @@ An example of a typical layout composed using `FormControl`:
         <FormControl.Hint>
           <Text size="200" variant="muted">
             I&apos;m interested in learning more about{' '}
-            <InlineLink size="200" href="#">
+            <InlineLink
+              size="200"
+              href="https://github.com/enterprise"
+              target="_blank"
+            >
               GitHub Enterprise Server
             </InlineLink>{' '}
             and would like to be contacted by GitHub’s sales team.
@@ -165,13 +169,21 @@ An example of a typical layout composed using `FormControl`:
       <FormControl.Label>
         <Text size="200" variant="muted">
           I hereby accept the{' '}
-          <InlineLink size="200" href="#">
+          <InlineLink
+            size="200"
+            href="https://github.com/customer-terms"
+            target="_blank"
+          >
             GitHub Customer Agreement
           </InlineLink>{' '}
           on behalf of my organization and confirm that I have the authority to
           do so. For more information about GitHub&apos;s privacy practices, see
           the{' '}
-          <InlineLink size="200" href="#">
+          <InlineLink
+            size="200"
+            href="https://docs.github.com/en/site-policy/privacy-policies/github-privacy-statement"
+            target="_blank"
+          >
             GitHub Privacy Statement.
           </InlineLink>{' '}
         </Text>
@@ -257,6 +269,22 @@ const App = () => {
 }
 
 render(App)
+```
+
+### Hint
+
+```jsx live
+<FormControl>
+  <FormControl.Label>Select</FormControl.Label>
+  <Select>
+    <Select.Option value="" selected disabled>
+      Select a handle
+    </Select.Option>
+    <Select.Option value="mona">Monalisa</Select.Option>
+    <Select.Option value="hubot">Hubot</Select.Option>
+  </Select>
+  <FormControl.Hint>With an optional message</FormControl.Hint>
+</FormControl>
 ```
 
 ### Full width
