--- a/docs/content/components/River.mdx
+++ b/docs/content/components/River.mdx
@@ -96,7 +96,7 @@ import {River} from '@primer/react-brand'
       </Text>
     </River.Content>
   </River>
-  {/* 60/40 example */}
+  {/* 60/40 example */};
   <River imageTextRatio="60:40">
     <River.Visual>
       <img
