add missing defaultValue

--- a/docs/content/components/FormControl.mdx
+++ b/docs/content/components/FormControl.mdx
@@ -43,8 +43,8 @@ import {FormControl} from '@primer/react-brand'
 <Box sx={{display: 'inline-grid', gap: 3}}>
   <FormControl>
     <FormControl.Label>Select</FormControl.Label>
-    <Select defaultValue="unselected">
-      <Select.Option value="unselected" disabled>
+    <Select defaultValue="">
+      <Select.Option value="" disabled>
         Select a handle
       </Select.Option>
       <Select.Option value="mona">Monalisa</Select.Option>
