add isCentered and titleHref props to SubdomainNavBar component API

--- a/docs/content/components/SubdomainNavBar.mdx
+++ b/docs/content/components/SubdomainNavBar.mdx
@@ -132,6 +132,7 @@ render(App)
 | `id`        | `string`                                                                                                                                                                               |                     | Sets a custom id                                                                                                                       |
 | `logoHref`  | `string`                                                                                                                                                                               | `https//github.com` | Optionally change the URL of the logo                                                                                                  |
 | `title`     | `string`                                                                                                                                                                               |                     | The title or name of the subdomain. Appears adjacent to the logo and is required for communicating content to assisitive technologies. |
+| `titleHref` | `string`                                                                                                                                                                               |         `/`         | The URL for the site. Typically used to link the title prop value to the site root.                                                    |
 | `ref`       | `React.RefObject`                                                                                                                                                                      |                     | Forward a Ref to the underlying DOM node                                                                                               |
 
 <h3 id="SubdomainNavBar-link">
